# FastAPI-Contact-book

./: .gitignore  README.md  main.py  pyproject.toml  test.db
docs/source/: conf.py
migration/: env.py
migration/versions/: 0ad56bcdc7eb_add_user.py  d295f1136118_init.py  d7ae3a09892f_add_avatar.py  e7089b4d439e_init.py
src/: schemas.py
src/conf/: config.py
src/database/: connect.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html
test/: conftest.py  test_rout_auth.py  test_unit_contacts.py  test_unit_users.py
